# brain-bridge-backend

./: README.md  main.py  pyproject.toml
api/v1/router/: __init__.py  ai.py  chat.py  courses.py  enrolment.py  files.py  flashcards.py  hub.py  instructors.py  quiz.py  reviews.py  study_plans.py  support.py  teams.py  user.py
config/: setting.py
controller/: ai.py  courses.py  enrolments.py  hub.py  instructors.py  questions.py  reviews.py  study_plans.py  support.py  teams.py  users.py
core/: db.py  setup.py
error/: __init__.py
handler/: __init__.py
model/: __init__.py  bookings.py  courses.py  enrolment.py  hub.py  instructors.py  instructors_specialty.py  questions.py  reviews.py  study_plans.py  subscription.py  teams.py  topic_completion.py  topics.py  users.py
schema/: __init__.py  ai.py  chat.py  courses.py  enrolments.py  hub.py  instructors.py  questions.py  reviews.py  study_plans.py  support.py  teams.py  users.py
service/: auth.py  email.py  redis.py  study_plans.py
service/chat/: connection_manager.py
service/files/: storage.py
template/: join_request_response.html  join_team.html  join_team_notification.html  member_removal_notification.html  otp.html  session_completed_notification.html  session_rescheduled_notification.html  student_booking_confirmed.html  support_acknowledgement.html  support_ticket.html  tutor_booking_confirmation.html
util/: enum.py  error.py  gen.py  meeting.py  serialize.py
